NCF-844: Fixed category thumbnail overlapping issue

--- a/docroot/profiles/unicef/themes/custom/vss/css/style.css
+++ b/docroot/profiles/unicef/themes/custom/vss/css/style.css
@@ -1768,7 +1768,7 @@ html[lang="es"] .region-header #block-settingsmenu .dropdown-menu li .form-type-
     .homepage-hero .homepage-hero-section--title {
       padding: 0 30px; } }
 
-.hero-wrapper {
+.homepage-hero-wrapper {
   margin: 0 20%;
   text-align: center; }
 
